--- a/style.css
+++ b/style.css
@@ -2,12 +2,15 @@
     background-color: rgb(40, 104, 165);
     text-align: center;
     color: blanchedalmond;
-    opacity: 0;
+    animation: fadeIn 3s;
 }
 
-.jumbotron {
-    opacity: 1;
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
 }
+
+
 .top-card {
     height: 100%;
     /* border: 5px solid rgb(85, 14, 14);   */
